--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
+	<script src="https://cdn.tailwindcss.com"></script>
+	<script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
 
  
 
@@ -131,6 +133,7 @@
 				<div class="col-lg-12">
 					<div class="title-box">
 						<h2>Evento</h2>
+						<p></p>
 						<p>Hora de misa: 1pm</p>
 					</div>
 				</div>
